--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 bluelens-log==1.0.2
-bluelens-spawning-pool==1.0.9
-certifi==2016.2.28
+bluelens-spawning-pool==1.0.10
+certifi==2017.11.5
 olefile==0.44
+pymongo==3.6.0
 python-dateutil==2.6.1
 redis==2.10.6
 six==1.11.0
+stylelens-product==1.0.32
 urllib3==1.22
